# rate-the-washroom

./: .gitignore  DOCKER_GUIDE.md  docker-compose.yml  env.example  package-lock.json  package.json  readme.md
apps/backend/: .dockerignore  Dockerfile  Dockerfile.dev  MIGRATION_GUIDE.md  SIMPLE_SETUP_GUIDE.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup-venv.bat  setup-venv.sh  start.sh
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/routers/: reviews.py  users.py  washrooms.py
apps/backend/app/core/: security.py  settings.py
apps/backend/app/db/: init_db.py  init_postgis.sql  models.py  schemas.py  session.py
apps/backend/data/: parse_csv.py  sfu_washrooms.csv  van-public-washroom-data.csv
apps/backend/scripts/: migrate.sh
apps/web/: .dockerignore  .update  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
apps/web/src/app/: index.css  layout.tsx  page.tsx
apps/web/src/app/add/: page.tsx
apps/web/src/app/add-listing/: page.tsx
apps/web/src/app/add-review/: page.tsx
apps/web/src/app/components/: AddListingExample.tsx  AddListingPage.tsx  AddReviewModal.tsx  AddReviewPage.tsx  Header.tsx  Hero.tsx  MapPage.tsx  (+14 more)
apps/web/src/components/: Header.tsx  RatingForm.tsx  SearchBar.tsx
apps/web/src/context/: authContext.tsx  firebase.ts
apps/web/src/hooks/: useAuth.tsx  useListings.tsx
apps/web/src/services/: reviews.ts  user.ts  washrooms.ts
apps/web/src/types/: index.ts
(+6 files in other folders)
